# mcp-extension-demo

./: .gitignore  README.md  TESTING.md  branch-protection.json  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: api.md
smarthub_extension/: __init__.py  server.py  types.py
tests/: test_server.py
