[project]
name = "smarthub-extension"
version = "0.1.2"
description = "SmartHub MCP extension for Goose"
authors = [
    {name = "Block", email = "goose@squareup.com"},
]
dependencies = [
    "mcp>=1.4.1",
    "snowflake-connector-python>=3.14.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.109.0",
    "typing-extensions>=4.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/block/smarthub-extension"
Documentation = "https://block.github.io/goose/docs/tutorials/custom-extensions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
smarthub = "smarthub_extension.cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=smarthub_extension --cov-report=term-missing"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]